# nostrkey.app.OC-python.src

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
clawhub/: SKILL.md  metadata.json
examples/: publish_to_relay.py  quickstart.py
src/nostrkey/: __init__.py  _chacha20.py  _secp256k1.py  bunker.py  crypto.py  events.py  identity.py  keys.py  relay.py  seed.py
support_skills/: README.md  TOOLS-snippet.md  nostrkey-SKILL.md  setup-identity.py  show-identity.py
tests/: test_crypto.py  test_events.py  test_identity.py  test_keys.py  test_security.py  test_seed.py
