[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nostrkey"
version = "0.1.0"
description = "Nostr identity SDK for OpenClaw AI entities — generate keys, sign events, encrypt data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Humanjava Enterprises", email = "dev@humanjava.com" },
]
keywords = ["nostr", "cryptography", "identity", "ai", "openclaw", "nostrkey"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "secp256k1>=0.14.0",
    "websockets>=12.0",
    "bech32>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.urls]
Homepage = "https://loginwithnostr.com/openclaw"
Repository = "https://github.com/HumanjavaEnterprises/nostrkey.app.OC-python.src"
Documentation = "https://loginwithnostr.com/openclaw"

[tool.hatch.build.targets.wheel]
packages = ["src/nostrkey"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
